# pcp-mcp

./: .coderabbit.yaml  .gitignore  .packit.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pcp-mcp-server.md  pyproject.toml  python-pcp-mcp.spec  server.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  commitlint.yml  publish.yml  release.yml
docs/: getting-started.md  index.md  remote-monitoring.md
docs/api/: client.md  config.md  errors.md  models.md  resources.md  tools.md
docs/resources/: catalog.md  health.md  index.md
docs/tools/: index.md  metrics.md  processes.md  system-snapshot.md
src/pcp_mcp/: AGENTS.md  __init__.py  client.py  config.py  context.py  errors.py  icons.py  middleware.py  models.py  server.py
src/pcp_mcp/prompts/: __init__.py  cpu.py  diagnose.py  disk.py  memory.py  network.py
src/pcp_mcp/resources/: __init__.py  catalog.py  health.py  metrics.py
src/pcp_mcp/tools/: AGENTS.md  __init__.py  metrics.py  network.py  system.py
src/pcp_mcp/utils/: __init__.py  builders.py  decorators.py  extractors.py
tests/: AGENTS.md  conftest.py  test_cli.py  test_client.py  test_config.py  test_context.py  test_errors.py  test_icons.py  test_middleware.py  test_multihost.py  test_prompts.py  test_resources.py  test_smoke.py  test_tools_metrics.py  test_tools_network.py  test_tools_system.py  test_utils.py
